<resources>
    <string name="app_name">Simpson</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_detalle_de_personaje">Homer Jay Simpson (Homero Jay
Simpson en Hispanoamérica), más conocido como Homer Simpson (Homero Simpson
en Hispanoamérica), es un personaje ficticio protagonista de la serie de
televisión de dibujos animados Los Simpson. Es el padre de la familia
protagonista y uno de los personajes centrales y más importantes de la serie.
Fue creado por el dibujante Matt Groening e hizo su debut en televisión el 19
de abril de 1987, en el corto Good Night del programa El show de Tracey
Ullman. El segundo nombre de Homer Simpson es un juego de palabras; durante
muchas temporadas no se supo qué había detrás de la J hasta que en el
capítulo «Doh-in In the Wind» Homer descubre que su segundo nombre es Jay
(nombre en inglés de la letra j); de este modo, cuando Homer pronuncia en
inglés su propio nombre, no se distingue si da la letra inicial del segundo
nombre o este al completo.</string>

    <string name="title_activity_detalle_de_personaje">DetalleDePersonajeActivity</string>
    <string name="ver_video">Ver video</string>
    <string name="texto_titulo_de_personaje">Medium Text</string>
    <string name="Agregar_Personaje">Agregar Personaje</string>
    <string name="nombre_Personaje">Nombre</string>


    <string name="nombre_app">Los Simpson </string>
    <string name="agregar_personaje">Agregar personaje</string>
    <string name="modificar_posicion">Modificar posición</string>
    <string name="eliminar_personaje">Eliminar personaje</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="lenguaje_app">Es</string>


    <string name="facebook_app_id">128497241198439</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">UY79e2PcsFgK3TTrTdRVjGjTy</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">EiHkNQOEFVsFTbH8MYDQIdx71ikQum8UbCLXyDyud9ivmTnb3Q</string>

</resources>
