<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagen_detalle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription=""
        android:src="@drawable/cabecera_personajes" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_de_detalle_personaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:text="@string/texto_titulo_de_personaje"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:textSize="@dimen/detalle_texto_titulo"/>

            <TextView
                android:id="@+id/descripcion_de_detalle_personaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxLines="30"
                android:text="@string/texto_detalle_de_personaje"
                android:textSize="@dimen/detalle_texto_descripción" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_ir_a_trailes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentStart="true"
                    android:text="@string/ver_video"
                    android:textSize="@dimen/visualizar_video"
                    />
                <Button
                    android:id="@+id/btn_facebook"
                    android:text="Facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/visualizar_video"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>